Restyles loading screen

--- a/app/assets/stylesheets/spinner.scss
+++ b/app/assets/stylesheets/spinner.scss
@@ -6,12 +6,11 @@
   justify-content: center;
   flex-direction: column;
 
-  background: #bdc3c7;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #fff;  /* fallback for old browsers */
 
   .spinnerLogo {
-    width: 100px;
+    height: 100px;
+    width: auto;
     margin: 15px;
   }
 
@@ -20,6 +19,5 @@
     margin: 15px 0px 30px 0px;
     font-size: 20px;
     font-weight: 900;
-    color: white;
   }
 }
