--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -21,7 +21,7 @@
     logoSq: "<%= asset_path('logo-sq.png')%>",
     logoSqSm: "<%= asset_path('logo-sq-sm.png')%>",
     logoSq35: "<%= asset_path('logo-sq-35.png')%>",
-    bannerLogo: "<%= asset_path('chat.png')%>",
+    bannerLogo: "<%= asset_path('logo.gif')%>",
 
     iconOnline: "<%= asset_path('icon-online.png') %>",
     iconOffline: "<%= asset_path('icon-offline.png') %>",
