--- a/app/assets/stylesheets/chat/user.scss
+++ b/app/assets/stylesheets/chat/user.scss
@@ -92,8 +92,6 @@ button {
 }
 
 .user-section {
-  display: flex;
-  flex-direction: column;
   overflow: auto;
   min-width: 220px;
   width: 220px;
@@ -131,6 +129,12 @@ button {
     height: 60px;
     // border: 1px solid $main-color;
     transition: all 0.3s ease 0s;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background: #ECE9E6;
+    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);
+    background: linear-gradient(to right, #FFFFFF, #ECE9E6);
 
     &:hover {
       background-color: rgba(0,0,0,0.1);
@@ -189,12 +193,10 @@ button {
   }
 
   .user-channels-container {
-    padding: 15px 0px;
-    height: 100%;
+    padding: 0;
 
     .user-channels-wrapper {
       flex: 1;
-      margin-top: 20px;
     }
 
     .user-channels-search-input {
@@ -205,7 +207,6 @@ button {
       border-radius: 2px;
       width: 159px;
       font-size: 0.8rem;
-      margin: 0 15px;
 
       &::placeholder {
         color: #888;
@@ -223,6 +224,7 @@ button {
 
     .user-channels-list {
       margin-top: -5px;
+      padding-top: 20px;
 
       button {
         text-align: left;
@@ -471,4 +473,14 @@ button {
       }
     }
   }
+}
+
+.user-channels-search-input-wrap {
+  position: sticky;
+  top: 60px;
+  z-index: 1;
+  padding: 10px 15px;;
+  background: #ECE9E6;
+  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);
+  background: linear-gradient(to right, #FFFFFF, #ECE9E6);
 }
